--- a/plugin.xml
+++ b/plugin.xml
@@ -1,110 +1,139 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:rim="http://www.blackberry.com/ns/widgets" id="phonegap-plugin-barcodescanner" version="7.0.2">
-  <name>BarcodeScanner</name>
-  <description>You can use the BarcodeScanner plugin to scan different types of barcodes (using the device's camera) and get the metadata encoded in them for processing within your application.</description>
-  <license>MIT</license>
-  <repo>https://github.com/phonegap/phonegap-plugin-barcodescanner</repo>
-  <issue>https://github.com/phonegap/phonegap-plugin-barcodescanner/issues</issue>
-  <engines>
-    <engine name="cordova" version=">=3.0.0"/>
-    <engine name="cordova-android" version=">=6.3.0"/>
-  </engines>
-  <js-module src="www/barcodescanner.js" name="BarcodeScanner">
-    <clobbers target="cordova.plugins.barcodeScanner"/>
-  </js-module>
-  <platform name="ios">
-    <config-file target="config.xml" parent="/*">
-      <feature name="BarcodeScanner">
-        <param name="ios-package" value="CDVBarcodeScanner"/>
-      </feature>
-    </config-file>
-    <resource-file src="src/ios/scannerOverlay.xib"/>
-    <resource-file src="src/ios/CDVBarcodeScanner.bundle"/>
-    <header-file src="src/ios/zxing-all-in-one.h"/>
-    <source-file src="src/ios/CDVBarcodeScanner.mm" compiler-flags="-fno-objc-arc"/>
-    <source-file src="src/ios/zxing-all-in-one.cpp"/>
-    <framework src="libiconv.dylib"/>
-    <framework src="AVFoundation.framework"/>
-    <framework src="AssetsLibrary.framework"/>
-    <framework src="CoreVideo.framework"/>
-    <framework src="QuartzCore.framework"/>
-    <framework src="CoreGraphics.framework"/>
-    <framework src="CoreImage.framework"/>
-    <framework src="AudioToolbox.framework"/>
-  </platform>
-  <platform name="android">
-    <source-file src="src/android/com/phonegap/plugins/barcodescanner/BarcodeScanner.java" target-dir="src/com/phonegap/plugins/barcodescanner"/>
-    <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="BarcodeScanner">
-        <param name="android-package" value="com.phonegap.plugins.barcodescanner.BarcodeScanner"/>
-      </feature>
-    </config-file>
-    <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <activity android:name="com.google.zxing.client.android.CaptureActivity" android:clearTaskOnLaunch="true" android:configChanges="orientation|keyboardHidden|screenSize" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:windowSoftInputMode="stateAlwaysHidden" android:exported="false"/>
-      <activity android:name="com.google.zxing.client.android.encode.EncodeActivity" android:label="Share"/>
-    </config-file>
-    <config-file target="AndroidManifest.xml" parent="/manifest">
-      <uses-permission android:name="android.permission.CAMERA"/>
-      <uses-permission android:name="android.permission.FLASHLIGHT"/>
-      <uses-feature android:name="android.hardware.camera" android:required="true"/>
-    </config-file>
-    <framework src="src/android/barcodescanner.gradle" custom="true" type="gradleReference"/>
-    <lib-file src="src/android/barcodescanner-release-2.1.5.aar"/>
-  </platform>
-  <platform name="windows">
-    <js-module src="src/windows/BarcodeScannerProxy.js" name="BarcodeScannerProxy">
-      <merges target=""/>
+    <name>BarcodeScanner</name>
+    <description>You can use the BarcodeScanner plugin to scan different types of barcodes (using the device's camera) and get the metadata encoded in them for processing within your application.</description>
+    <license>MIT</license>
+    <repo>https://github.com/phonegap/phonegap-plugin-barcodescanner</repo>
+    <issue>https://github.com/phonegap/phonegap-plugin-barcodescanner/issues</issue>
+    <engines>
+        <engine name="cordova" version=">=3.0.0"/>
+        <engine name="cordova-android" version=">=6.3.0"/>
+    </engines>
+    <js-module src="www/barcodescanner.js" name="BarcodeScanner">
+        <clobbers target="cordova.plugins.barcodeScanner"/>
     </js-module>
-    <config-file target="package.appxmanifest" parent="/Package/Capabilities">
-      <DeviceCapability Name="webcam"/>
-    </config-file>
-    <framework src="src/windows/lib.UW/x86/ZXing.winmd" target-dir="x86" arch="x86" custom="true" versions=">8.1"/>
-    <framework src="src/windows/lib.UW/x64/ZXing.winmd" target-dir="x64" arch="x64" custom="true" versions=">8.1"/>
-    <framework src="src/windows/lib.UW/ARM/ZXing.winmd" target-dir="ARM" arch="ARM" custom="true" versions=">8.1"/>
-    <framework src="src/windows/lib/WinRTBarcodeReader.csproj" custom="true" type="projectReference" versions="&lt;=8.1"/>
-    <asset src="src/windows/assets/plugin-barcodeScanner.css" target="css/plugin-barcodeScanner.css"/>
-    <hook src="hooks/windows/check-arch.js" type="before_compile"/>
-    <hook src="hooks/windows/check-arch.js" type="before_run"/>
-  </platform>
-  <platform name="wp8">
-    <config-file target="config.xml" parent="/*">
-      <feature name="BarcodeScanner">
-        <param name="wp-package" value="BarcodeScanner"/>
-      </feature>
-    </config-file>
-    <config-file target="Properties/WMAppManifest.xml" parent="/Deployment/App/Capabilities">
-      <Capability Name="ID_CAP_ISV_CAMERA"/>
-    </config-file>
-    <framework src="src/wp8/lib/zxing.wp8.0.dll" custom="true"/>
-    <asset src="src/wp8/assets/cancel.png" target="Images/appbar.cancel.png"/>
-    <source-file src="src/wp8/BarcodeScanner.cs"/>
-    <source-file src="src/wp8/BarcodeScannerTask.cs"/>
-    <source-file src="src/wp8/BarcodeScannerUI.xaml"/>
-    <source-file src="src/wp8/BarcodeScannerUI.xaml.cs"/>
-  </platform>
-  <platform name="browser">
-    <config-file target="config.xml" parent="/*">
-      <feature name="BarcodeScanner">
-        <param name="browser-package" value="BarcodeScanner"/>
-      </feature>
-    </config-file>
-    <js-module src="src/browser/BarcodeScannerProxy.js" name="BarcodeScannerProxy">
-      <runs/>
-    </js-module>
-  </platform>
-  <platform name="blackberry10">
-    <source-file src="src/blackberry10/index.js" target-dir="BarcodeScanner"/>
-    <source-file src="src/blackberry10/qrcode.js" target-dir="BarcodeScanner"/>
-    <lib-file src="src/blackberry10/native/device/libBarcodeScanner.so" arch="device"/>
-    <lib-file src="src/blackberry10/native/simulator/libBarcodeScanner.so" arch="simulator"/>
-    <config-file target="www/config.xml" parent="/widget">
-      <feature name="BarcodeScanner">
-        <param name="blackberry-package" value="phonegap-plugin-barcodescanner"/>
-      </feature>
-    </config-file>
-    <config-file target="www/config.xml" parent="/widget/rim:permissions">
-      <rim:permit>use_camera</rim:permit>
-    </config-file>
-    <dependency id="cordova-plugin-bb-app"/>
-  </platform>
+    <platform name="ios">
+        <config-file target="config.xml" parent="/*">
+            <feature name="BarcodeScanner">
+                <param name="ios-package" value="CDVBarcodeScanner"/>
+            </feature>
+        </config-file>
+        <resource-file src="src/ios/scannerOverlay.xib"/>
+        <resource-file src="src/ios/CDVBarcodeScanner.bundle"/>
+        <header-file src="src/ios/zxing-all-in-one.h"/>
+        <source-file src="src/ios/CDVBarcodeScanner.mm" compiler-flags="-fno-objc-arc"/>
+        <source-file src="src/ios/zxing-all-in-one.cpp"/>
+        <framework src="libiconv.dylib"/>
+        <framework src="AVFoundation.framework"/>
+        <framework src="AssetsLibrary.framework"/>
+        <framework src="CoreVideo.framework"/>
+        <framework src="QuartzCore.framework"/>
+        <framework src="CoreGraphics.framework"/>
+        <framework src="CoreImage.framework"/>
+        <framework src="AudioToolbox.framework"/>
+    </platform>
+    <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="BarcodeScanner">
+                <param name="android-package" value="com.phonegap.plugins.barcodescanner.BarcodeScanner"/>
+            </feature>
+        </config-file>
+        <config-file target="AndroidManifest.xml" parent="application">
+            <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+                      android:name="org.cloudsky.cordovaPlugins.ZBarScannerActivity"
+                      android:screenOrientation="fullUser"
+                      android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+        </config-file>
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-feature android:name="android.hardware.camera" />
+            <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+            <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
+            <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+            <uses-permission android:name="android.permission.CAMERA" />
+        </config-file>
+        <config-file target="res/values/strings.xml" parent="/*">
+            <string name="csZbarScannerTitle">Scan QR Code</string>
+            <string name="csZbarScannerInstructions">Please point your camera at the QR code.</string>
+            <color name="csZbarScannerTextColor">#ffffff</color>
+            <color name="csZbarScannerTextBackground">#88000000</color>
+            <color name="csZbarScannerBackground">#000000</color>
+        </config-file>
+        <framework src="com.android.support:support-v4:23.1.0" />
+        <resource-file src="src/android/res/layout/cszbarscanner.xml" target="res/layout/cszbarscanner.xml" />
+        <source-file src="src/android/com/phonegap/plugins/barcodescanner/ZBarcodeFormat.java" target-dir="src/com/phonegap/plugins/barcodescanner" />
+        <source-file src="src/android/com/phonegap/plugins/barcodescanner/BarcodeScanner.java" target-dir="src/com/phonegap/plugins/barcodescanner" />
+        <source-file src="src/android/com/phonegap/plugins/barcodescanner/ZBarScannerActivity.java" target-dir="src/com/phonegap/plugins/barcodescanner" />
+        <source-file src="src/android/com/phonegap/plugins/barcodescanner/ZBar.java" target-dir="src/com/phonegap/plugins/barcodescanner" />
+        <source-file src="src/android/libs/zbar.jar" target-dir="libs" />
+        <source-file src="src/android/libs/armeabi/libiconv.so" target-dir="libs/armeabi" />
+        <source-file src="src/android/libs/armeabi/libzbarjni.so" target-dir="libs/armeabi" />
+        <source-file src="src/android/libs/armeabi-v7a/libiconv.so" target-dir="libs/armeabi-v7a" />
+        <source-file src="src/android/libs/armeabi-v7a/libzbarjni.so" target-dir="libs/armeabi-v7a" />
+        <source-file src="src/android/libs/arm64-v8a/libiconv.so" target-dir="libs/arm64-v8a" />
+        <source-file src="src/android/libs/arm64-v8a/libzbarjni.so" target-dir="libs/arm64-v8a" />s
+        <source-file src="src/android/libs/x86/libiconv.so" target-dir="libs/x86" />
+        <source-file src="src/android/libs/x86/libzbarjni.so" target-dir="libs/x86" />
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable"/>
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable-hdpi"/>
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable-ldpi"/>
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable-mdpi"/>
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable-xhdpi"/>
+        <source-file src="src/android/res/drawable/camera_flash.png" target-dir="res/drawable-xxhdpi"/>
+    </platform>
+    <platform name="windows">
+        <js-module src="src/windows/BarcodeScannerProxy.js" name="BarcodeScannerProxy">
+            <merges target=""/>
+        </js-module>
+        <config-file target="package.appxmanifest" parent="/Package/Capabilities">
+            <DeviceCapability Name="webcam"/>
+        </config-file>
+        <framework src="src/windows/lib.UW/x86/ZXing.winmd" target-dir="x86" arch="x86" custom="true" versions=">8.1"/>
+        <framework src="src/windows/lib.UW/x64/ZXing.winmd" target-dir="x64" arch="x64" custom="true" versions=">8.1"/>
+        <framework src="src/windows/lib.UW/ARM/ZXing.winmd" target-dir="ARM" arch="ARM" custom="true" versions=">8.1"/>
+        <framework src="src/windows/lib/WinRTBarcodeReader.csproj" custom="true" type="projectReference" versions="&lt;=8.1"/>
+        <asset src="src/windows/assets/plugin-barcodeScanner.css" target="css/plugin-barcodeScanner.css"/>
+        <hook src="hooks/windows/check-arch.js" type="before_compile"/>
+        <hook src="hooks/windows/check-arch.js" type="before_run"/>
+    </platform>
+    <platform name="wp8">
+        <config-file target="config.xml" parent="/*">
+            <feature name="BarcodeScanner">
+                <param name="wp-package" value="BarcodeScanner"/>
+            </feature>
+        </config-file>
+        <config-file target="Properties/WMAppManifest.xml" parent="/Deployment/App/Capabilities">
+            <Capability Name="ID_CAP_ISV_CAMERA"/>
+        </config-file>
+        <framework src="src/wp8/lib/zxing.wp8.0.dll" custom="true"/>
+        <asset src="src/wp8/assets/cancel.png" target="Images/appbar.cancel.png"/>
+        <source-file src="src/wp8/BarcodeScanner.cs"/>
+        <source-file src="src/wp8/BarcodeScannerTask.cs"/>
+        <source-file src="src/wp8/BarcodeScannerUI.xaml"/>
+        <source-file src="src/wp8/BarcodeScannerUI.xaml.cs"/>
+    </platform>
+    <platform name="browser">
+        <config-file target="config.xml" parent="/*">
+            <feature name="BarcodeScanner">
+                <param name="browser-package" value="BarcodeScanner"/>
+            </feature>
+        </config-file>
+        <js-module src="src/browser/BarcodeScannerProxy.js" name="BarcodeScannerProxy">
+            <runs/>
+        </js-module>
+    </platform>
+    <platform name="blackberry10">
+        <source-file src="src/blackberry10/index.js" target-dir="BarcodeScanner"/>
+        <source-file src="src/blackberry10/qrcode.js" target-dir="BarcodeScanner"/>
+        <lib-file src="src/blackberry10/native/device/libBarcodeScanner.so" arch="device"/>
+        <lib-file src="src/blackberry10/native/simulator/libBarcodeScanner.so" arch="simulator"/>
+        <config-file target="www/config.xml" parent="/widget">
+            <feature name="BarcodeScanner">
+                <param name="blackberry-package" value="phonegap-plugin-barcodescanner"/>
+            </feature>
+        </config-file>
+        <config-file target="www/config.xml" parent="/widget/rim:permissions">
+            <rim:permit>use_camera</rim:permit>
+        </config-file>
+        <dependency id="cordova-plugin-bb-app"/>
+    </platform>
 </plugin>
