--- a/plugin.xml
+++ b/plugin.xml
@@ -40,7 +40,7 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="application">
             <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
-                      android:name="org.cloudsky.cordovaPlugins.ZBarScannerActivity"
+                      android:name="com.phonegap.plugins.barcodescanner.ZBarScannerActivity"
                       android:screenOrientation="fullUser"
                       android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
         </config-file>
